Further cleaning Java 2022/01